# lockchain

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  lockchain-install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
crates/lockchain-cli/src/: main.rs  tui.rs
crates/lockchain-core/src/: config.rs  fallback.rs  lib.rs  service.rs
crates/lockchain-core/src/workflow/: bootstrap.rs  diagnostics.rs  provisioning.rs
crates/lockchain-core/templates/: lockchain-cryptsetup-keys.sh
crates/lockchain-daemon/src/: main.rs
crates/lockchain-key-usb/src/: linux.rs
crates/lockchain-luks/src/: system.rs
crates/lockchain-luks/tests/: provider_scaffold.rs
crates/lockchain-ui/: Cargo.toml
crates/lockchain-ui/src/: main.rs
crates/lockchain-ui/src/components/: header.rs  key_status.rs  mission_report.rs  mod.rs  terminal.rs
crates/lockchain-ui/src/dispatcher/: mod.rs  workflow.rs
crates/lockchain-ui/src/panels/: health.rs  key.rs  mod.rs  settings.rs  targets.rs
crates/lockchain-ui/src/provider/: luks_adapter.rs  mod.rs  zfs_adapter.rs
crates/lockchain-ui/src/shell/: mod.rs  view.rs
docs/: CONTRIBUTING.md  E2E_TEST_PLAN_HYPERV_UBUNTU_25_10.md  INSTALL.md  RELEASE.md  SECURITY.md
