[workspace]
resolver = "2"
members = [
    "crates/lockchain-provider",
    "crates/lockchain-core",
    "crates/lockchain-zfs",
    "crates/lockchain-luks",
    "crates/lockchain-key-usb",
    "crates/lockchain-daemon",
    "crates/lockchain-cli",
    "crates/lockchain-ui",
    "packaging/lockchain-deb",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["Angus // x4ngus@gmail.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/x4ngus/lockchain"
homepage = "https://lockchain.io"
categories = ["security", "filesystem", "encryption"]
keywords = ["zfs", "luks", "encryption", "security", "usb", "gui"]
# Minimum supported Rust version. Verify with: rustup toolchain install 1.85 && cargo +1.85 check
rust-version = "1.85"
